--- a/man/git-hub.1
+++ b/man/git-hub.1
@@ -19,10 +19,10 @@ None
 $ git hub
 .
 .SH "AUTHOR"
-Written by Cliff Rowley \fIcliffrowley@gmail\.com\fR
+Written by Cliff Rowley <cliffrowley@gmail\.com>
 .
 .SH "REPORTING BUGS"
-\fIhttps://github\.com/cliffrowley/git\-goodies/issues\fR
+<https://github\.com/cliffrowley/git\-goodies/issues>
 .
 .SH "SEE ALSO"
-\fIhttps://github\.com/cliffrowley/git\-goodies/\fR
+<https://github\.com/cliffrowley/git\-goodies/>
