--- a/man/git-list-local-commits.1
+++ b/man/git-list-local-commits.1
@@ -7,7 +7,7 @@
 \fBgit\-list\-local\-commits\fR \- List commits that exist only in the local branch
 .
 .SH "SYNOPSIS"
-\fBgit\-list\-local\-commits\fR [\fIoptions\fR]
+\fBgit\-list\-local\-commits\fR [<options>]
 .
 .SH "DESCRIPTION"
 List commits that exist only in the local branch and not its remote counterpart\.
@@ -29,10 +29,10 @@ Any options that `git\-log` supports\.
 $ git list\-local\-commits
 .
 .SH "AUTHOR"
-Written by Cliff Rowley \fIcliffrowley@gmail\.com\fR
+Written by Cliff Rowley <cliffrowley@gmail\.com>
 .
 .SH "REPORTING BUGS"
-\fIhttps://github\.com/cliffrowley/git\-goodies/issues\fR
+<https://github\.com/cliffrowley/git\-goodies/issues>
 .
 .SH "SEE ALSO"
-\fIhttps://github\.com/cliffrowley/git\-goodies/\fR
+<https://github\.com/cliffrowley/git\-goodies/>
